# mail-sender

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
mail_sender/: __init__.py  cli.py  sender.py  validator.py
mail_sender/templates/: feedback_request.html
mail_senderpy/: __init__.py  cli.py  sender.py  validator.py
mail_senderpy/templates/: announcement.html  marketing_email.html
tests/: conftest.py  test_cli.py  test_sender.py  test_validator.py
